# shopping-reminder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GITHUB_WORKFLOW.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: README.md  cd.yml  ci.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  database-design.md
src/shopping_reminder/: config.py  dynamodb_client.py  lambda_handler.py  logger.py  models.py  notion_client.py
terraform/: README.md  archive.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  resource_groups.tf  variables.tf  versions.tf
terraform/environments/production/: .terraform-docs.yml  .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/examples/basic/: README.md  main.tf
terraform/modules/shopping-reminder/: .terraform-docs.yml  README.md  main.tf  outputs.tf  variables.tf
tests/shopping_reminder/: test_config.py  test_dynamodb_client.py  test_e2e.py  test_lambda_handler.py  test_models.py  test_notion_client.py
